removed unused code, modified the way it looks, performance changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body style="margin:0px;overflow: hidden;">
-<iframe src="/full" style="width:100vw;height:70vh;"></iframe><br>
-<iframe id="myIframe" src="/send.html" style="width:100vw;height:30vh;"></iframe>
+<iframe src="/full" style="width:100vw;height:75vh;outline: none;box-shadow: none;"></iframe><br>
+<iframe id="myIframe" src="/send.html" style="width:100vw;height:25vh;outline: none;box-shadow: none;"></iframe>
 
 <script>
     window.addEventListener('beforeunload', function() {
