page no longer needs to reload to display new messages, removed manual reload button, added dark more (not toggle able) added .gitignore removed borders between messages window and sending window, removed message sender header in sender

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,15 @@
     <meta name="author" content="Gabrielzv1233">
     <meta charset="UTF-8">
     <title>msgr</title>
+  <style>
+    iframe {
+      border: solid;
+    }
+  </style>
 </head>
-
 <body style="margin:0px;overflow: hidden;">
-<iframe src="/full" style="width:100vw;height:75vh;outline: none;box-shadow: none;"></iframe><br>
-<iframe id="myIframe" src="/send.html" style="width:100vw;height:25vh;outline: none;box-shadow: none;"></iframe>
+<iframe src="/full" style="width:100vw;height:80vh;outline: none;box-shadow: none;"></iframe><br>
+<iframe id="myIframe" src="/send.html" style="width:100vw;height:20vh;outline: none;box-shadow: none;"></iframe>
 
 <script>
     window.addEventListener('beforeunload', function() {
