--- a/templates/full.html
+++ b/templates/full.html
@@ -1,42 +1,46 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      msgr
-    </title>
-    <style>
-      #content {
-        word-wrap: break-word;
-      }
-      #reloadButton {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-}
-      #rulesandinfo {
-        color:#301934;
-      }
-    </style>
-  </head>
-    <span style="color:blue;font-size:70%;"><button id="reloadButton" onclick="reloadPage()">--- Manual reload ---</button><center><p id="reloadButton"style="margin-top:20px;">(auto reloads every second)</p></center></span>
-  <body style="margin: 0; padding: 0;">
-    <div id="rulesandinfo"><b><h3>Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</h3></b></div>
-    <!-- here is the element for the messages -->
-    <div style="margin-left:3px;" id="content">{{ messages|safe }}</div>
-    <script>
-      function reloadPage() {
-       location.reload();
-}
-    </script>
-    <body onload="scrollPage()">
-<script>function scrollPage() {
-  window.scrollTo(0, document.body.scrollHeight);
-}</script>
-      <script>
-        window.onload = function() {
+<head>
+    <title>msgr</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+        $(document).ready(function() {
+            // Function to fetch and update the messages
+            function updateMessages() {
+                $.ajax({
+                    url: "/api/get/raw",
+                    type: "GET",
+                    dataType: "text",
+                    success: function(data) {
+                        $("#messages").html(data);
+                    }
+                });
+            }
+
+            // Update messages initially
+            updateMessages();
+
+            // Set interval to update messages every 1 second
             setInterval(function() {
-                location.reload();
-            }, 1000); // 1000 milliseconds = 1 second
-        };
+                updateMessages();
+            }, 1000);
+        });
     </script>
-  </body>
+  <style>
+    #rulesandinfo {
+        color:#DECE80;
+      }
+    body {
+      background-color:#0E1525;
+    }
+    #messages {
+      color:#F5F9FC;
+    }
+    
+  </style>
+</head>
+<body>
+      <div id="rulesandinfo"><b><h3>Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</h3></b></div>
+    <div id="messages"></div>
+</body>
 </html>
