--- a/templates/send.html
+++ b/templates/send.html
@@ -1,10 +1,17 @@
 <html>
 <head>
     <title>Message Sender</title>
+  <style>
+    body {
+      background-color:#0E1525;
+    }
+    label {
+      color: #f5f9fc;
+    }
+  </style>
 </head>
   <body style="margin:0px;overflow:hidden;">
 <center>
-    <h1 style="margin-bottom:3px;">Message Sender</h1>
     <form action="/send" method="POST" onsubmit="saveUsername()">
         <label for="username"><b>Username:</b></label><br>
         <input style="text-align:center;" type="text" maxlength="27" class="tb" id="username" name="user" required><br>
