--- a/templates/full.html
+++ b/templates/full.html
@@ -28,10 +28,10 @@
     </script>
   <style>
     #rulesandinfo {
-        color:#DECE80;
+        color:#A18A1A;
       }
     body {
-      background-color:#0E1525;
+      background-color:#1C2333;
     }
     #messages {
       color:#F5F9FC;
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-      <div id="rulesandinfo"><b><h3>Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</h3></b></div>
+      <center><div id="rulesandinfo"><b><h3>Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</h3></b></div></center>
     <div id="messages"></div>
 </body>
 </html>
