--- a/templates/message_sent.html
+++ b/templates/message_sent.html
@@ -13,8 +13,16 @@
       window.location.href = "/send.html";
     }, 2000);
   </script>
+    <style>
+    body {
+      background-color:#1C2333;
+    }
+    h1 {
+      color: #CCD1D9;
+    }
+    </style>
 </head>
 <body>
-  <h1>Message Sent</h1>
+  <center><h1>Message Sent</h1></center>
 </body>
 </html>
