--- a/templates/send.html
+++ b/templates/send.html
@@ -3,10 +3,18 @@
     <title>Message Sender</title>
   <style>
     body {
-      background-color:#0E1525;
+      background-color:#1C2333;
     }
     label {
       color: #f5f9fc;
+    }
+    .um {
+      border-radius:4px;
+      outline:0px;
+      border:1px black;
+      background-color:#3C445C;
+      color:#CCD1D9;
+      font-weight:bold;
     }
   </style>
 </head>
@@ -14,10 +22,10 @@
 <center>
     <form action="/send" method="POST" onsubmit="saveUsername()">
         <label for="username"><b>Username:</b></label><br>
-        <input style="text-align:center;" type="text" maxlength="27" class="tb" id="username" name="user" required><br>
+        <input style="text-align:center;" type="text" maxlength="27" class="um" id="username" name="user" required><br>
         
         <label for="message"><b>Message:</b></label>
-        <input autocomplete="off" type="text" id="message" name="msg" class="tb" style="width:99%;" autofocus required><br>
+        <input autocomplete="off" type="text" id="message" name="msg" class="um" style="width:99%;" autofocus required><br>
         
         <input style="border-radius:10px;width:10vw;background-color:#0053A6;color:#F5F9FC;" type="submit" value="Send" onclick="removeUnloadEvent()">
     </form>
