--- a/templates/send.html
+++ b/templates/send.html
@@ -25,7 +25,7 @@
         <input style="text-align:center;" type="text" maxlength="27" class="um" id="username" name="user" required><br>
         
         <label for="message"><b>Message:</b></label>
-        <input autocomplete="off" type="text" id="message" name="msg" class="um" style="width:99%;" autofocus required><br>
+        <input autocorrect="true" autocomplete="off" type="text" id="message" name="msg" class="um" style="width:99%;" autofocus required><br>
         
         <input style="border-radius:10px;width:10vw;background-color:#0053A6;color:#F5F9FC;" type="submit" value="Send" onclick="removeUnloadEvent()">
     </form>
