removed unneeded code in full.html

--- a/templates/full.html
+++ b/templates/full.html
@@ -3,7 +3,7 @@
 <head>
     <title>msgr</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
+    <script>
         $(document).ready(function() {
             // Function to fetch and update the messages
             function updateMessages() {
@@ -26,21 +26,24 @@
             }, 1000);
         });
     </script>
-  <style>
-    #rulesandinfo {
-        color:#A18A1A;
-      }
-    body {
-      background-color:#1C2333;
-    }
-    #messages {
-      color:#F5F9FC;
-    }
-    
-  </style>
+    <style>
+        #rulesandinfo {
+            color: #A18A1A;
+        }
+
+        body {
+            background-color: #1C2333;
+        }
+
+        #messages {
+            color: #F5F9FC;
+        }
+    </style>
 </head>
 <body>
-      <center><div id="rulesandinfo"><b><h3>Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</h3></b></div></center>
-    <div id="messages"></div>
+<center>
+    <div id="rulesandinfo"><b><h3>Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</h3></b></div>
+</center>
+<div id="messages"></div>
 </body>
 </html>
