did stuff forgot wat

--- a/templates/full.html
+++ b/templates/full.html
@@ -13,6 +13,8 @@
                     dataType: "text",
                     success: function(data) {
                         $("#messages").html(data);
+                        window.scrollTo(0, document.body.scrollHeight);
+
                     }
                 });
             }
