added a scroll to bottom automatically and a warning for used timezone
warning states "Time is shown in GMT+5 (24h format)"

--- a/templates/full.html
+++ b/templates/full.html
@@ -13,8 +13,8 @@
                     dataType: "text",
                     success: function(data) {
                         $("#messages").html(data);
+                      // Scroll to bottom
                         window.scrollTo(0, document.body.scrollHeight);
-
                     }
                 });
             }
