--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
     }
   </style>
 </head>
-<body style="margin:0px;overflow: hidden;">
-<iframe src="/full" style="width:100vw;height:84vh;outline: none;box-shadow: none;"></iframe>
-<iframe id="send" src="/send.html" style="width:100vw;height:16vh;outline: none;box-shadow: none;" ></iframe>
+<body style="margin:0px;overflow: hidden;bottom:0px;">
+<iframe src="/full" style="width:100vw;height:calc(100% - 95px);outline: none;box-shadow: none;"></iframe>
+<iframe id="send" src="/send.html" style="width:100vw;height:95px;outline: none;box-shadow: none;" ></iframe>
 
 <script>
     window.addEventListener('beforeunload', function() {
