--- a/templates/send.html
+++ b/templates/send.html
@@ -22,12 +22,11 @@
 <center>
     <form action="/send" method="POST" onsubmit="saveUsername()">
         <label for="username"><b>Username:</b></label><br>
-        <input style="text-align:center;" type="text" maxlength="27" class="um" id="username" name="user" required><br>
-        
+        <input style="text-align:center;" type="text" maxlength="27" class="um" id="username" name="user" required><br>  
         <label for="message"><b>Message:</b></label>
         <input autocorrect="true" autocomplete="off" type="text" id="message" name="msg" class="um" style="width:99%;" autofocus required><br>
         
-        <input style="border-radius:10px;width:10vw;background-color:#0053A6;color:#F5F9FC;" type="submit" value="Send" onclick="removeUnloadEvent()">
+        <input style="border:hidden;border-radius:10px;width:10vw;background-color:#0053A6;color:#F5F9FC;" type="submit" value="Send" onclick="removeUnloadEvent()">
     </form>
 </center>
     <script>
