attempted to add a favicon
no idea why it wont show everything should work

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
 <meta content="msgr" property="og:title" />
     <meta content="msgr is a simple chatting website" property="og:description" />
     <meta content="https://msgr.gabrielzv1233.repl.co" property="og:url" />
-    <meta content="https://msgr.gabrielzv1233.repl.co/favicon" property="og:image" />
+    <meta content="https://msgr.gabrielzv1233.repl.co/favicon.png" property="og:image" />
     <meta content="#0E1525" data-react-helmet="true" name="theme-color" />
     <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
     <meta name="author" content="Gabrielzv1233">
     <meta charset="UTF-8">
+    <link rel="icon" href="https://msgr.gabrielzv1233.repl.co/favicon.png">
     <title>msgr</title>
   <style>
     iframe {
@@ -15,7 +16,7 @@
     }
   </style>
 </head>
-<body style="margin:0px;overflow: hidden;bottom:0px;">
+<body style="margin:0px;;bottom:0px;">
 <iframe src="/full" style="width:100vw;height:calc(100% - 95px);outline: none;box-shadow: none;"></iframe>
 <iframe id="send" src="/send.html" style="width:100vw;height:95px;outline: none;box-shadow: none;" ></iframe>
 
