ok I got it to work I think

--- a/templates/full.html
+++ b/templates/full.html
@@ -52,11 +52,18 @@
           font-size:1.17em;
           font-weight:bolder;
         }
+        .info {
+          background-color: #3C445C;
+          color: #CCD1D9;
+          font-weight: bold;
+          border-radius:5px;
+        }
     </style>
 </head>
 <body>
 <center>
-  <b class="HTDM">Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</b><br><b class="TW">Time is shown as the time of the server</b>
+  <b class="HTDM">Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</b><br><b class="TW">Time is shown as the time of the server</b><br>
+<button class="info" onclick="window.open('/info', '_blank');">Info Page</button>
 </center>
 <div id="messages"></div>
 </body>
