--- a/templates/info.html
+++ b/templates/info.html
@@ -11,6 +11,9 @@
 </head>
 <body>
   <h1>How dose it work</h1>
-  <p>well to start this is a simple chatting platform, with no authentication, and no way to delete your messages yourself (sorry)<br>
-  you can go to <a href="/full">/full</a> to see the chat in fullscreen or you can use the API at <a href="/api/send">/api/send</a> to send somthing in the chat type or use curl on somthing like https://msgr.gabrielzv1233.repl.co/api/send?user=lorpsum%20ipsum&msg=Hello%20world, to get the text use /api/get, this will display the text formatted (it will look like the fullscreen page but without extra stuff) or u can go to <a href="/api/get/raw"> and this will show it in raw text (meaning everything that is stored will be shown the way it is</a><br>time will show up as the time on the server not your time, Time is shown as the time of the server</p>
+  <p>well to start this is a simple chatting platform, with no authentication, and no way to delete your messages yourself (sorry)</p>
+  <p>Spam will be deleted and methods of bypassing chat filters will be patched and messages using these methods may be modifyed to comply with filters</p>
+<p>time will show up as the time on the server not your time, Time is shown as the time of the server</p>
+  <p>you can find a list of blocked words/sentances at <a href="/chatfilter">/chatfilter</a><br>you can also request more to be added by making a github issue using the <a href="https://github.com/gabrielzv1233/msgr/issues/new/choose">"Chat filter request" template</a></p>
+<p>you can go to <a href="/full">/full</a> to see the chat in fullscreen or you can use the API at <a href="/api/send">/api/send</a> to send somthing in the chat type or use curl on somthing like https://msgr.gabrielzv1233.repl.co/api/send?user=lorpsum%20ipsum&msg=Hello%20world, to get the text use /api/get, this will display the text formatted (it will look like the fullscreen page but without extra stuff) or u can go to <a href="/api/get/raw"> and this will show it in raw text (meaning everything that is stored will be shown the way it is</a><br></p>
 </body>
