updated filters and css, commented out the favicon as it doesn't work

--- a/templates/full.html
+++ b/templates/full.html
@@ -68,6 +68,9 @@
           z-index: 9999;
           margin-bottom:0px;
         }
+        a {
+          color:blue
+        }
     </style>
 </head>
 <body>
