--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="english, texting, text, chatroom, python, chatting, multiplayer">
     <meta name="author" content="Gabrielzv1233">
     <meta charset="UTF-8">
-    <link rel="icon" href="https://msgr.gabrielzv1233.repl.co/favicon.png">
+    <!-- link rel="icon" href="https://msgr.gabrielzv1233.repl.co/favicon.png" -->
     <title>msgr</title>
   <style>
     iframe {
