I commited the wrong changes here is the actall update

--- a/templates/full.html
+++ b/templates/full.html
@@ -35,7 +35,7 @@
         }
 
         #messages {
-            margin-top:5.17em;
+            margin-top:6.17em;
             color: #F5F9FC;
             word-break:break-all;
         }
@@ -75,7 +75,9 @@
 </head>
 <body>
 <center>
-  <header><b class="HTDM">Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</b><br><b class="TW">Time is shown as the time of the server</b><br>
+  <header><b class="HTDM">Hi welcome to the chatroom, if you need to have a message you need deleted, please contact me</b><br>
+<u style="color:white;">if the owner sent a message it than the username would look like this:</u> <b style="color:gold;">gabrielzv1233 &#x2713;</b><br>
+<b class="TW">Time is shown as the time of the server</b><br>
 <button class="info" onclick="window.open('/info', '_blank');">Info Page</button></header>
 </center>
 <div id="messages"></div>
