added a server and client side 1k char limit

--- a/templates/send.html
+++ b/templates/send.html
@@ -24,7 +24,7 @@
         <label for="username"><b>Username:</b></label><br>
         <input style="text-align:center;" type="text" maxlength="27" class="um" id="username" name="user" required><br>  
         <label for="message"><b>Message:</b></label>
-        <input autocorrect="true" autocomplete="off" type="text" id="message" name="msg" class="um" style="width:99%;" autofocus required><br>
+        <input maxlength="1000" autocorrect="true" autocomplete="off" type="text" id="message" name="msg" class="um" style="width:99%;" autofocus required><br>
         
         <input style="border:hidden;border-radius:10px;width:10vw;background-color:#0053A6;color:#F5F9FC;" type="submit" value="Send" onclick="removeUnloadEvent()">
     </form>
