fixed some errors with the merging of settings

--- a/templates/full.html
+++ b/templates/full.html
@@ -97,7 +97,7 @@
 <body>
 <center>
   <header><b class="HTDM">Hi welcome to the chatroom, please be sure to checkout the <a href="/info">info</a> page</b><br>
-<u style="color:white;">if the owner sent a message it than the username would look like this:</u> <b style="color:gold;">gabrielzv1233 &#x2713;</b><br>
+<u style="color:white;">Gold names with a checkmark are owners, green names are trusted users</u><br>
 <b class="TW">Time is shown as the time of the server</b><br>
 <!--button class="info" onclick="window.open('/info', '_blank');">Info Page</button--></header>
 </center>
