updated readme, removed the dissabling of using "✓" in messages and updated headers

--- a/templates/full.html
+++ b/templates/full.html
@@ -97,7 +97,7 @@
 <body>
 <center>
   <header><b class="HTDM">Hi welcome to the chatroom, please be sure to checkout the <a href="/info">info</a> page</b><br>
-<u style="color:white;">Gold names with a checkmark are owners, green names are trusted users</u><br>
+<b style="color:white;"><i style="color:gold;">Gold</i> names with a checkmark are owners, <i style="color:limegreen;"">Lime green</i> or <b style="color:#A908B5;">purple</b> names are trusted users</b><br>
 <b class="TW">Time is shown as the time of the server</b><br>
 <!--button class="info" onclick="window.open('/info', '_blank');">Info Page</button--></header>
 </center>
