--- a/templates/full.html
+++ b/templates/full.html
@@ -97,9 +97,9 @@
 <body>
 <center>
   <header><b class="HTDM">Hi welcome to the chatroom, please be sure to checkout the <a href="/info">info</a> page</b><br>
-<b style="color:white;"><i style="color:gold;">Gold</i> names with a checkmark are owners, <i style="color:limegreen;"">Lime green</i> or <b style="color:#A908B5;">purple</b> names are trusted users</b><br>
+<b style="color:white;"><i style="color:gold;">Gold</i> names with a checkmark are owners, <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users</b><br>
 <b class="TW">Time is shown as the time of the server</b><br>
-<!--button class="info" onclick="window.open('/info', '_blank');">Info Page</button--></header>
+</header>
 </center>
 <div id="messages"></div>
 </body>
