added URL support (in a markdown kinda way)

--- a/templates/full.html
+++ b/templates/full.html
@@ -97,7 +97,8 @@
 <body>
 <center>
   <header><b class="HTDM">Hi welcome to the chatroom, please be sure to checkout the <a href="/info">info</a> page</b><br>
-<b style="color:white;"><i style="color:gold;">Gold</i> names with a checkmark are owners, <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users</b><br>
+<b style="color:white;"><b style="color:gold;">Gold</b> names with a checkmark are owners, <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users</b><br>
+<b style="color:white;">to make a url use this format [google*](google.com*) (* = required)</b><br>
 <b class="TW">Time is shown as the time of the server</b><br>
 </header>
 </center>
