--- a/templates/full.html
+++ b/templates/full.html
@@ -56,7 +56,7 @@
         }
 
         #messages {
-            margin-top:5.17em;
+            margin-top:7.17em;
             color: #F5F9FC;
             word-break:break-all;
         }
@@ -98,7 +98,7 @@
 <center>
   <header><b class="HTDM">Hi welcome to the chatroom, please be sure to checkout the <a href="/info">info</a> page</b><br>
 <b style="color:white;"><b style="color:gold;">Gold</b> names with a checkmark are owners, <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users</b><br>
-<b style="color:white;">to make a url use this format [google*](google.com*) (* = required)</b><br>
+<b style="color:white;">to make a url use this format [google*](google.com*) (* = required)<br>DO NOT ADD "https://" or "http://" to the url or it wont work right</b><br>
 <b class="TW">Time is shown as the time of the server</b><br>
 </header>
 </center>
