--- a/templates/full.html
+++ b/templates/full.html
@@ -54,9 +54,9 @@
             background-color: #1C2333;
             overflow-x:wrap;
         }
-
-        #messages {
-            margin-top:7.17em;
+        #messages{
+            color: white;
+            margin-top:8.17em;
             color: #F5F9FC;
             word-break:break-all;
         }
@@ -88,6 +88,7 @@
           background-color: #1C2333;
           z-index: 9999;
           margin-bottom:0px;
+          color:white;
         }
         a {
           color:blue
@@ -97,7 +98,8 @@
 <body>
 <center>
   <header><b class="HTDM">Hi welcome to the chatroom, please be sure to checkout the <a href="/info">info</a> page</b><br>
-<b style="color:white;"><b style="color:gold;">Gold</b> names with a checkmark are owners, <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users</b><br>
+<b><b style="color:gold;">Gold</b> names with a checkmark are owners, <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users</b><brcolor: white;"color:white;"></b><br>
+<b>make sure urls have https:// at the start or it wont convert to clickable</b><br>
 <b class="TW">Time is shown as the time of the server</b><br>
 </header>
 </center>
