--- a/templates/full.html
+++ b/templates/full.html
@@ -102,8 +102,11 @@
 <body>
 <center>
   <header><b class="HTDM">Hi welcome to the chatroom, please be sure to checkout the <a href="/info">info</a> page</b><br>
-<b><b style="color:gold;">Gold</b> names with a checkmark are owners, <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users</b><brcolor: white;"color:white;"></b><br>
-<b>make sure urls have https:// at the start or it wont convert to clickable</b><br>
+    <b>make sure urls have https:// at the start or it wont convert to clickable</b><br>
+<b><b style="color:gold;">Gold</b> names with a checkmark are owners <b style="color:red;">Red</b> names are admins<br>
+  only <b style="color:gold;">Owners</b> and <b style="color:red;">Admins</b> can delete messages and ban users<br>
+  <b>messages from console look like [<i style="color:blue;">console</i>]:</b> message<br>
+  <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users.</b></b><br>
 <b class="TW">Time is shown as the time of the server</b><br>
 </header>
 </center>
