--- a/templates/info.html
+++ b/templates/info.html
@@ -10,13 +10,16 @@
     <title>msgr - info</title>
 </head>
 <body>
+  <b><b style="color:gold;">Gold</b> names with a checkmark are owners <b style="color:red;">Red</b> names are admins<br>
+  only <b style="color:gold;">Owners</b> and <b style="color:red;">Admins</b> can delete messages and ban users<br>
+  <b>messages from console look like [<i style="color:blue;">console</i>]:</b> message<br>
+  <b style="color:limegreen;"">Lime green</b> or <b style="color:#A908B5;">purple</b> names are trusted users.</b></b><br>
   <h1>How dose it work</h1>
   <p>well to start this is a simple chatting platform, with no authentication, and no way to delete your messages yourself (sorry)</p>
   <p>Spam will be deleted and methods of bypassing chat filters will be patched and messages using these methods may be modifyed to comply with filters</p>
 <p>time will show up as the time on the server not your time, Time is shown as the time of the server</p>
   <p>by using this app you understand that anyone can use any username, messages may be edited by anyone who has acsess to the repo (devs, owner)</p>
   <p>Devs, and owners will have gold names with a checkmark</p>
-<
 <p>you can go to <a href="/full">/full</a> to see the chat in fullscreen or you can use the API at <a href="/api/send">/api/send</a> to send somthing in the chat type or use curl on somthing like https://msgr.gabrielzv1233.repl.co/api/send?user=lorpsum%20ipsum&msg=Hello%20world, (sending API is disabled as and depreciated) to get the text use /api/get, this will display the text formatted (it will look like the fullscreen page but without extra stuff) or u can go to <a href="/api/get/raw"> and this will show it in raw text (meaning everything that is stored will be shown the way it is</a></p>
 <p>to make ur own chatroom, create a new repl on replit, and import https://github.com/gabrielzv1233/msgr/ from github (press import from github and put gabrielzv1233/msgr in the textbox for where to import from) then name it and make sure the project is python.</p><br>
 <h2 style="color:red;">DO NOT SHARE YOUR UUID UNLESS IF THE OWNER ASKS, IF THEY DO ASK ONLY SEND IN PRIVATE DMs</h2><h4> (UUIDs cannot share personal information it just identifys the user and hackers can spoof there UUID allowing them to change their username colors to yours if you have one)</h4>
