--- a/templates/send.html
+++ b/templates/send.html
@@ -18,7 +18,7 @@
     }
   </style>
 </head>
-  <body style="margin:0px;overflow:hidden;">
+<body style="margin:0px;overflow:hidden;">
 <center>
     <form action="/send" method="POST" onsubmit="saveUsername()">
         <label for="username"><b>Username:</b></label><br>
@@ -29,14 +29,14 @@
         <input tabindex="0" style="border:hidden;border-radius:10px;width:10vw;background-color:#0053A6;color:#F5F9FC;" type="submit" value="Send" onclick="removeUnloadEvent()">
     </form>
 </center>
-    <script>
+<script>
   // Check if the fingerprint cookie exists
   if (!document.cookie.includes("fingerprint")) {
     // Generate a random fingerprint value
     const fingerprint = generateUUID();
     
     // Set the fingerprint cookie with appropriate attributes
-    document.cookie = `fingerprint=${fingerprint}; SameSite=None; Secure`;
+    document.cookie = `fingerprint=${fingerprint}; SameSite=None; Secure; path=/`;
   }
 
   // Function to generate a random UUID
@@ -48,75 +48,76 @@
     });
   }
 
-    // Function to reroll the UUID and print its value
+  // Function to reroll the UUID and print its value
   function rerollUUID() {
     const fingerprint = generateUUID();
     console.log("New UUID:", fingerprint);
   }
 </script>
-    <script>
-        var messageField = document.getElementById("message");
-        // Load the saved username from the cookie and set it in the input field on page load
-        window.onload = function() {
-            var savedUsername = getCookie("username");
-            if (savedUsername) {
-                document.getElementById("username").value = savedUsername;
-            }
-        };
-        
-        // Save the username as a cookie when the form is submitted
-        function saveUsername() {
-            var username = document.getElementById("username").value;
-            setCookie("username", username, 1);
-        }
+<script>
+  var messageField = document.getElementById("message");
 
-        // Save the username as a cookie when receiving the saveUsername message
-        window.addEventListener("message", function(event) {
-            if (event.data === "saveUsername") {
-                saveUsername();
-            }
-        });
+  // Load the saved username from the cookie and set it in the input field on page load
+  window.onload = function() {
+    var savedUsername = getCookie("username");
+    if (savedUsername) {
+      document.getElementById("username").value = savedUsername;
+    }
+  };
 
-        // Remove the beforeunload event listener when the submit button is clicked
-        function removeUnloadEvent() {
-            window.removeEventListener("beforeunload", handleBeforeUnload);
-        }
+  // Save the username as a cookie when the form is submitted
+  function saveUsername() {
+    var username = document.getElementById("username").value;
+    setCookie("username", username, 1);
+  }
 
-        // Function to handle the beforeunload event
-        function handleBeforeUnload(event) {
-            if (messageField.value.trim() !== "") {
-                event.preventDefault(); // Cancel the unload event
-                event.returnValue = ""; // Required for Chrome
-            }
-        }
+  // Save the username as a cookie when receiving the saveUsername message
+  window.addEventListener("message", function(event) {
+    if (event.data === "saveUsername") {
+      saveUsername();
+    }
+  });
 
-        // Add the beforeunload event listener
-        window.addEventListener("beforeunload", handleBeforeUnload);
+  // Remove the beforeunload event listener when the submit button is clicked
+  function removeUnloadEvent() {
+    window.removeEventListener("beforeunload", handleBeforeUnload);
+  }
 
-        // Function to set a cookie
-        function setCookie(cookieName, cookieValue, expirationDays) {
-            var d = new Date();
-            d.setTime(d.getTime() + (expirationDays * 24 * 60 * 60 * 1000));
-            var expires = "expires=" + d.toUTCString();
-            document.cookie = cookieName + "=" + cookieValue + ";" + expires + ";path=/";
-        }
+  // Function to handle the beforeunload event
+  function handleBeforeUnload(event) {
+    if (messageField.value.trim() !== "") {
+      event.preventDefault(); // Cancel the unload event
+      event.returnValue = ""; // Required for Chrome
+    }
+  }
 
-        // Function to get the value of a cookie
-        function getCookie(cookieName) {
-            var name = cookieName + "=";
-            var decodedCookie = decodeURIComponent(document.cookie);
-            var cookieArray = decodedCookie.split(';');
-            for (var i = 0; i < cookieArray.length; i++) {
-                var cookie = cookieArray[i];
-                while (cookie.charAt(0) == ' ') {
-                    cookie = cookie.substring(1);
-                }
-                if (cookie.indexOf(name) == 0) {
-                    return cookie.substring(name.length, cookie.length);
-                }
-            }
-            return "";
-        }
-    </script>
+  // Add the beforeunload event listener
+  window.addEventListener("beforeunload", handleBeforeUnload);
+
+  // Function to set a cookie
+  function setCookie(cookieName, cookieValue, expirationDays) {
+    var d = new Date();
+    d.setTime(d.getTime() + (expirationDays * 24 * 60 * 60 * 1000));
+    var expires = "expires=" + d.toUTCString();
+    document.cookie = cookieName + "=" + cookieValue + "; " + expires + "; path=/";
+  }
+
+  // Function to get the value of a cookie
+  function getCookie(cookieName) {
+    var name = cookieName + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var cookieArray = decodedCookie.split(';');
+    for (var i = 0; i < cookieArray.length; i++) {
+      var cookie = cookieArray[i];
+      while (cookie.charAt(0) == ' ') {
+        cookie = cookie.substring(1);
+      }
+      if (cookie.indexOf(name) == 0) {
+        returncookie.substring(name.length, cookie.length);
+      }
+    }
+    return "";
+  }
+</script>
 </body>
 </html>
