--- a/templates/send.html
+++ b/templates/send.html
@@ -30,31 +30,41 @@
     </form>
 </center>
 <script>
-  // Check if the fingerprint cookie exists
-  if (!document.cookie.includes("fingerprint")) {
-    // Generate a random fingerprint value
-    const fingerprint = generateUUID();
-    
-    // Set the fingerprint cookie with appropriate attributes
-    document.cookie = `fingerprint=${fingerprint}; SameSite=None; Secure; path=/`;
-  }
-
   // Function to generate a random UUID
   function generateUUID() {
     return 'xxxxxxxx-xxxx-xxxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
-      const r = Math.random() * 16 | 0,
+      var r = Math.random() * 16 | 0,
         v = c === 'x' ? r : (r & 0x3 | 0x8);
       return v.toString(16);
     });
   }
 
-  // Function to reroll the UUID and print its value
-  function rerollUUID() {
-    const fingerprint = generateUUID();
-    console.log("New UUID:", fingerprint);
+  // Function to get the value of a cookie
+  function getCookie(cookieName) {
+    var name = cookieName + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var cookieArray = decodedCookie.split(';');
+    for (var i = 0; i < cookieArray.length; i++) {
+      var cookie = cookieArray[i];
+      while (cookie.charAt(0) == ' ') {
+        cookie = cookie.substring(1);
+      }
+      if (cookie.indexOf(name) == 0) {
+        return cookie.substring(name.length, cookie.length);
+      }
+    }
+    return "";
   }
-</script>
-<script>
+
+  // Check if the fingerprint cookie exists
+  if (!document.cookie.includes("fingerprint")) {
+    // Generate a random fingerprint value
+    var fingerprint = generateUUID();
+    
+    // Set the fingerprint cookie with appropriate attributes
+    document.cookie = "fingerprint=" + fingerprint + "; SameSite=None; Secure; path=/";
+  }
+
   var messageField = document.getElementById("message");
 
   // Load the saved username from the cookie and set it in the input field on page load
@@ -98,25 +108,8 @@
   function setCookie(cookieName, cookieValue, expirationDays) {
     var d = new Date();
     d.setTime(d.getTime() + (expirationDays * 24 * 60 * 60 * 1000));
-    var expires = "expires=" + d.toUTCString();
+    var expires = "expires=" + d.toUTCStringd();
     document.cookie = cookieName + "=" + cookieValue + "; " + expires + "; path=/";
-  }
-
-  // Function to get the value of a cookie
-  function getCookie(cookieName) {
-    var name = cookieName + "=";
-    var decodedCookie = decodeURIComponent(document.cookie);
-    var cookieArray = decodedCookie.split(';');
-    for (var i = 0; i < cookieArray.length; i++) {
-      var cookie = cookieArray[i];
-      while (cookie.charAt(0) == ' ') {
-        cookie = cookie.substring(1);
-      }
-      if (cookie.indexOf(name) == 0) {
-        returncookie.substring(name.length, cookie.length);
-      }
-    }
-    return "";
   }
 </script>
 </body>
