fixed chat filter casing detection, removed all references too api send, added some auto scaling features (scuffed and works bad)

--- a/templates/full.html
+++ b/templates/full.html
@@ -93,6 +93,7 @@
           z-index: 9999;
           margin-bottom:0px;
           color:white;
+          font-size: calc(1vw + calc(130% - 20px));
         }
         a {
           color:blue
